hjshim test commit

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>git test!!</title>
 
 </head>
 <body>
     <h1>test</h1>
-    <p>안녕하세요! 테스트 파일입니다.</p>
-    <p>귀석 Pull Test file !!1 </p>
+    <p>안녕하세요! 스프링 스터디 깃 테스트 중입니다.</p>
+    <p>!!!!!!!!!!귀석 Pull Test file !! </p>
 </body>
 </html>
