귀석 머지 테스트

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,8 +6,8 @@
 
 </head>
 <body>
-    <h1>test</h1>
-    <p>안녕하세요! 테스트 파일입니다.</p>
-    <p>귀석 Pull Test file !!1 </p>
+    <h1>pusg Test</h1>
+    <p>머지하면 어캐될까요</p>
+    <p>귀석 Test file !!1 </p>
 </body>
 </html>
