귀석 머지 테스트

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>test</h1>
     <p>안녕하세요! 스프링 스터디 깃 테스트 중입니다.</p>
-    <p>!!!!!!!!!!귀석 Pull Test file !! </p>
+
+    <p>이거는 제가만든겁니다 - 귀석</p>
+
+
 </body>
 </html>
